# python-sql-angular

./: .gitignore  README.md  package.json
client/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
client/src/: index.html  styles.colors.scss  styles.scss  styles.variables.scss
client/src/app/: app.config.ts  app.html  app.meta.ts  app.routes.ts  app.scss  app.ts
client/src/app/home/: home.html  home.ts
client/src/app/layout/: ui.service.ts
client/src/app/layout/footer/: footer.component.ts  footer.html  footer.scss  footer.ts
client/src/app/layout/header/: header.html  header.scss  header.ts
client/src/app/layout/sidebar/: sidebar.html  sidebar.scss  sidebar.ts
client/src/app/shared/: shared.types.ts
client/src/app/shared/form/searchbar/: searchbar.html  (+2 more)
client/src/app/shared/modal/: modal.html  modal.scss  modal.service.ts  modal.ts
client/src/app/shared/pipes/: age-pipe.ts
client/src/app/shared/services/: subscriptions.ts
client/src/app/shared/svg/: svg.types.ts
client/src/app/shared/types/: colors.ts
client/src/app/shared/validation/: validators.ts
client/src/app/users/: user.api.ts  user.model.ts  users.html  users.scss  users.ts
client/src/app/users/user/: user.html  user.scss  user.ts
server/: .gitignore  app.py  pyproject.toml
server/db/: initdb.py  students.db
server/src/: __init__.py
server/src/db/: initdata.py  initdb.py  students.db  users.db
server/src/models/: student.py  user.py
server/src/routes/: students.py  user.py
server/src/utils/: common.py
server/src/validation/: user.py
(+12 files in other folders)
